--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@
 
     --radius: 0.5rem
   }
+
   .dark {
 
     --background: 0 0% 3.9%;
@@ -110,9 +111,12 @@
 }
 
 @layer base {
+  @font-face {}
+
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
